k8s-ipset-ui.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ipset-ui
  namespace: ipset-ui
spec:
  selector:
    matchLabels:
      app: ipset-ui
  template:
    metadata:
      labels:
        app: ipset-ui
    spec:
      terminationGracePeriodSeconds: 5
      hostNetwork: true
      containers:
        - name: ipset-ui
          image: ixdx/ipset-ui:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /opt/ipset-ui
              readOnly: false
      volumes:
        - name: data
          hostPath:
            path: /opt/ipset-ui
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: nas

---

---
apiVersion: v1
kind: Service
metadata:
  name: ipset-ui
  namespace: ipset-ui
spec:
  ipFamilyPolicy: SingleStack
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
  selector:
    app: ipset-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipset-ui
  namespace: ipset-ui
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "ipset-ui.k8s.snrnc.in"
      secretName: ingress-tls-k8s
  rules:
    - host: "ipset-ui.k8s.snrnc.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipset-ui
                port:
                  number: 8000
